# Notebook

./: .gitignore  functions.py  note.py  pyproject.toml
notebook/: __main__.py  app.py
notebook/utils/: functions.py
